--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"style.89d35.css":{"type":"style","weight":1},"bundle.e9f9e.js":{"type":"script","weight":1}}}
+{"/":{"style.89d35.css":{"type":"style","weight":1},"bundle.0392c.js":{"type":"script","weight":1}}}
